--- a/Benbox/AndroidManifest.xml
+++ b/Benbox/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.xoninja.notebox"
+    package="com.xoninja.benbox"
     android:versionCode="1"
     android:versionName="1.0" >
 
