--- a/Benbox/.classpath
+++ b/Benbox/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="C:/Users/maria/git/benbox/Benbox/libs/dropbox-android-sdk-1.3.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/maria/git/benbox/Benbox/libs/httpmime-4.0.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/maria/git/benbox/Benbox/libs/json_simple-1.1.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
