--- a/Benbox/bin/AndroidManifest.xml
+++ b/Benbox/bin/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xoninja.benbox"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="tanner" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -14,18 +14,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".Splash"
-            android:label="@string/title_activity_splash" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+       
         <activity
             android:name=".Dashboard"
-            android:label="@string/title_activity_dashboard" >
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,30 +26,19 @@
         </activity>
         <activity
             android:name=".NuevaNota"
-            android:label="@string/title_activity_nueva_nota" >
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ListadoNotas"
-            android:label="@string/title_activity_listado_notas" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            >
         </activity>
         <activity
             android:name=".Nota"
             android:label="@string/title_activity_nota" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.dropbox.client2.android.AuthActivity"
@@ -77,11 +58,6 @@
         <activity
             android:name="com.xoninja.benbox.Dropbox"
             android:label="@string/title_activity_dropbox" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
