--- a/Benbox/bin/AndroidManifest.xml
+++ b/Benbox/bin/AndroidManifest.xml
@@ -29,7 +29,6 @@
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
             </intent-filter>
         </activity>
         <activity
@@ -59,6 +58,12 @@
             android:name="com.xoninja.benbox.Dropbox"
             android:label="@string/title_activity_dropbox" >
         </activity>
+        <receiver android:name="BenboxWidgetProvider" android:label="benbox">
+  			<intent-filter>
+        		<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+  			</intent-filter>
+ 			 <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget_addlist" />
+		</receiver>
     </application>
 
 </manifest>
